Finished browse store by name spacing and letter fix

--- a/CSS/aboutus.css
+++ b/CSS/aboutus.css
@@ -27,11 +27,10 @@
 
 .wrapper_card {
   display: flex;
-  flex-grow: 1;
-  flex-basis: 50%
+  flex-grow: 2;
   align-items: center;
   border-radius: 16px;
-  padding: 24px auto;
+  padding: 24px;
   box-shadow: 0 5px 12px 0 rgba(0, 0, 0, 0.05);
   background-color: var(--white);
 }
