--- a/CSS/component.css
+++ b/CSS/component.css
@@ -80,3 +80,30 @@ td {
   padding: 20px 24px;
   border-bottom: 1px solid var(--light-gray);
 }
+
+.letter-spacing {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  width: 100%;
+  flex-wrap: wrap;
+  margin-bottom: 24px;
+}
+
+.letter-spacing ul {
+  padding-left: 0;
+}
+
+.letter-spacing li,
+.letter-spacing a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 7px;
+  text-decoration: none;
+}
+
+.store-card h4 {
+  margin-top: 8px;
+  margin-bottom: 0px;
+}
