--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -54,8 +54,6 @@
   display: block;
 }
 
-
-
 .nav_logo_h2 h2 {
   margin: 0px;
   padding: 0;
@@ -124,7 +122,7 @@ header {
     color: var(--black);
     white-space: nowrap;
   }
-  
+
   .nav_menu_link_extra_padding a {
     font-size: 17px;
     font-stretch: normal;
@@ -136,7 +134,7 @@ header {
     color: var(--black);
   }
 
-  .nav_menu_icon ul {
+  .nav_menu_icon # {
     padding-left: 24px;
   }
   .nav_store_wrapper {
@@ -225,7 +223,7 @@ header {
 
 .nav_store {
   background-color: var(--brand-light-blue);
-  box-shadow: 0 5px 12px 0 rgba(0, 0, 0, 0.1)
+  box-shadow: 0 5px 12px 0 rgba(0, 0, 0, 0.1);
 }
 
 .nav_store_wrapper {
@@ -299,7 +297,6 @@ header {
 }
 
 @media only screen and (max-width: 767px) {
-
   .nav_store_wrapper {
     margin: 0 24px;
   }
